[package]
name = "xray-prometheus-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.26"
prometheus_exporter = "0.8.5"
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"
prost = "0.13.5"
regex = "1.11.1"
bb8 = "0.9.0"
clap = { version = "4.5.31", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.3"
